--- a/vcba-front-app/src/app/home/home.component.html
+++ b/vcba-front-app/src/app/home/home.component.html
@@ -10,19 +10,19 @@
     <section class="about-vcba-section">
       <div class="section-content">
         <div class="about-header">
-          <h2>GIỚI THIỆU VỀ VCBA</h2>
-          <p>Hiệp hội Doanh nghiệp Việt Nam tại Campuchia - Kết nối và phát triển bền vững</p>
+          <h2>{{ 'home.about.title' | translate }}</h2>
+          <p>{{ 'home.about.subtitle' | translate }}</p>
         </div>
     
         <!-- Dynamic About Sections -->
         <ng-container *ngFor="let section of aboutSections">
           <div class="about-row" [class.reverse]="section.layout === 'reverse'">
             <div class="about-image">
-              <img [src]="section.imageUrl" [alt]="section.altText">
+              <img [src]="section.imageUrl" [alt]="section.altKey | translate">
             </div>
             <div class="about-text">
-              <h3>{{ section.title }}</h3>
-              <p *ngFor="let paragraph of section.paragraphs">{{ paragraph }}</p>
+              <h3>{{ section.titleKey | translate }}</h3>
+              <p *ngFor="let pKey of section.paragraphKeys">{{ pKey | translate }}</p>
             </div>
           </div>
         </ng-container>
@@ -34,8 +34,8 @@
     <section class="member-logos-section">
       <div class="section-content">
         <div class="section-header">
-          <h2>HỘI VIÊN TIÊU BIỂU</h2>
-          <p>Các doanh nghiệp thành viên hàng đầu của VCBA</p>
+          <h2>{{ 'home.members.title' | translate }}</h2>
+          <p>{{ 'home.members.subtitle' | translate }}</p>
         </div>
         <div class="member-grid">
           <a *ngFor="let member of members" [href]="member.profileUrl" target="_blank" class="member-card">
@@ -44,7 +44,7 @@
             </div>
             <div class="member-info">
               <h4>{{ member.name }}</h4>
-              <p>{{ member.field }}</p>
+              <p>{{ member.fieldKey | translate }}</p>
             </div>
           </a>
         </div>
