--- a/vcba-front-app/src/app/home/components/news-section/news-section.component.html
+++ b/vcba-front-app/src/app/home/components/news-section/news-section.component.html
@@ -19,26 +19,26 @@
     <!-- News Grid -->
     <div class="news-grid">
       <!-- Loop through filtered news -->
-      <div *ngFor="let newsItem of filteredNews" class="news-card" [attr.data-category]="newsItem.category">
+      <div *ngFor="let newsItem of filteredNews" class="news-card" [attr.data-category]="newsItem.categoryKey">
         <div class="news-image">
-          <a [routerLink]="newsItem.link">
-            <img [src]="newsItem.image" [alt]="newsItem.title"/>
+          <a [routerLink]="['/', translate.currentLang, 'news', newsItem.slug]">
+            <img [src]="newsItem.image" [alt]="newsItem.titleKey | translate"/>
           </a>
-          <div class="news-category">{{ newsItem.category }}</div>
+          <div class="news-category">{{ newsItem.categoryKey | translate }}</div>
         </div>
         <div class="news-content">
-          <h3><a [routerLink]="newsItem.link">{{ newsItem.title }}</a></h3>
-          <p>{{ newsItem.excerpt }}</p>
+          <h3><a [routerLink]="['/', translate.currentLang, 'news', newsItem.slug]">{{ newsItem.titleKey | translate }}</a></h3>
+          <p>{{ newsItem.excerptKey | translate }}</p>
           <div class="news-card-footer">
             <span class="news-date">{{ newsItem.date }}</span>
-            <a [routerLink]="newsItem.link" class="news-link">{{ 'home.news.viewMore' | translate }}</a>
+            <a [routerLink]="['/', translate.currentLang, 'news', newsItem.slug]" class="news-link">{{ 'home.news.viewMore' | translate }}</a>
           </div>
         </div>
       </div>
     </div>
     
     <div class="news-cta">
-      <a routerLink="/news-detail" class="btn btn-primary">{{ 'home.news.viewMoreArticles' | translate }}</a>
+      <a [routerLink]="['/', translate.currentLang, 'news']" class="btn btn-primary">{{ 'home.news.viewMoreArticles' | translate }}</a>
     </div>
   </div>
 </section> 
